# ai-job-finder

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: master_resume.example.yaml
db/: schema.sql
src/jobhorizon/: config.py  criteria.py  dashboard.py  db.py  dedup.py  docx_render.py  features.py  filters.py  learner.py  llm_client.py  logging_setup.py  master_resume.py  models.py  normalize.py  paths.py  pipeline.py  run.py  scoring.py  tailoring.py
src/jobhorizon/adapters/: __init__.py  _util.py  adzuna.py  arbeitnow.py  himalayas.py  jobicy.py  jobspy_adapter.py  jooble.py  remoteok.py  remotive.py  wwr.py
src/jobhorizon/templates/: index.html
tests/: conftest.py  test_adapters.py  test_dashboard.py  test_dedup.py  test_features.py  test_filters.py  test_learner.py  test_llm_client.py  test_master_resume.py  test_normalize.py  test_pipeline.py  test_scoring.py  test_tailoring.py  test_util.py
