[project]
name = "jobhorizon"
version = "0.1.0"
description = "Local, single-user, deterministic job-search and triage pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Akshay Bhatnagar" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Private :: Do Not Upload",
]
dependencies = [
  "requests>=2.31",
  "feedparser>=6.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "python-jobspy>=1.1",
  "scikit-learn>=1.4",
  "flask>=3.0",
  "anthropic>=0.40",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "requests-mock>=1.12",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["jobhorizon"]
